argocd/waffledotcom-dev/waffledotcom-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waffledotcom-server
  labels:
    app: waffledotcom-server
spec:
  replicas: 0
  selector:
    matchLabels:
      app: waffledotcom-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 4
  template:
    metadata:
      labels:
        app: waffledotcom-server
    spec:
      serviceAccountName: waffledotcom
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - image: yny.ocir.io/ax1dvc8vmenm/waffledotcom-dev/waffledotcom-server:22
          name: waffledotcom-server
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 128Mi
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/v1/health/
              port: 8080
          readinessProbe:
            httpGet:
              path: /api/v1/health/
              port: 8080
            timeoutSeconds: 3
            failureThreshold: 5
          startupProbe:
            httpGet:
              path: /api/v1/health/
              port: 8080
            failureThreshold: 20
---
apiVersion: v1
kind: Service
metadata:
  name: waffledotcom-server
spec:
  type: ClusterIP
  selector:
    app: waffledotcom-server
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: waffledotcom-server
spec:
  gateways:
    - istio-ingress/waffle-ingressgateway
    - mesh
  hosts:
    - wadot-api-dev.wafflestudio.com
  http:
    - route:
        - destination:
            host: waffledotcom-server
